<resources>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="media_library">Медиатека</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_service">Пользовательское соглашение</string>
    <string name="link_to_the_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail_address">alex@harhanov.ru</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="sharing_text">Поделиться</string>
    <string name="send_message_title">Отправить сообщение</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="back_button">кнопка назад</string>
    <string name="cover_image">обложка альбома</string>
    <string name="duration_label">Длительность</string>
    <string name="album_label">Альбом</string>
    <string name="release_year_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
    <string name="zero_time">00:00</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="no_playlists_created">Вы не создали\nни одного плейлиста</string>
    <string name="playlist_cover">обложка плейлиста</string>
    <string name="create">Создать</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="confirm_dialog_name">Завершить создание плейлиста?</string>
    <string name="data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="track">трек</string>
    <string name="tracks_genitive">трека</string>
    <string name="tracks">треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="has_already_been_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="delete_track">Удалить трек</string>
    <string name="want_to_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="no">ОТМЕНА</string>
    <string name="yes">УДАЛИТЬ</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="there_are_not_tracks_here">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="want_to_delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="save">Сохранить</string>
    <string name="empty_playlist_announce">Этот плейлист сейчас пуст</string>

</resources>