<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.practicum.playlistmaker.settings.ui.SettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_marginStart="@dimen/mini_margin"
        android:layout_marginTop="@dimen/mini_margin"
        android:layout_marginEnd="@dimen/big_margin">

        <TextView
            android:id="@+id/settingsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/standard_indent"
            android:text="@string/settings"
            android:textAppearance="@style/title2"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/menuItem"
        android:text="@string/dark_theme" />

    <RelativeLayout
        android:id="@+id/shareArea"
        style="@style/menuItem">

        <TextView
            android:id="@+id/sharing"
            style="@style/ys_regular"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/shareIcon"
            android:layout_width="@dimen/side_icons"
            android:layout_height="@dimen/side_icons"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/share" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/writeToSupport"
        style="@style/menuItem">

        <TextView
            android:id="@+id/writeSupport"
            style="@style/ys_regular"
            android:text="@string/write_to_support" />

        <ImageView
            android:id="@+id/supportIcon"
            android:layout_width="@dimen/side_icons"
            android:layout_height="@dimen/side_icons"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/support" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/serviceTerms"
        style="@style/menuItem">

        <TextView
            android:id="@+id/ys_regular_"
            style="@style/ys_regular"
            android:text="@string/terms_of_service" />

        <ImageView
            android:id="@+id/vector"
            android:layout_width="@dimen/side_icons"
            android:layout_height="@dimen/side_icons"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/arrow_forward" />
    </RelativeLayout>

</LinearLayout>