<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panel_heade"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:ignore="DuplicateIds">

    <RelativeLayout
        android:id="@+id/panel_heade"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="@dimen/standard_margin">

        <View
            android:id="@+id/exitSettings"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/arrow_back"
            android:foreground="?attr/selectableItemBackground"
            android:iconTint="@color/black" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginTop="0dp"
            android:paddingLeft="64dp"
            android:text="@string/settings"
            android:textAppearance="@style/title2"
            android:textStyle="bold"></TextView>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/lists"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/end_margin"
        >

        <TextView
            android:id="@+id/themeSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginBottom="10dp"
            android:text="@string/dark_theme"
            android:layout_centerVertical="true"
            android:textAppearance="@style/ys_regular_" />

        <Switch
            android:id="@+id/selectionSwitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lists"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/end_margin"
        >

        <TextView
            android:id="@+id/ys_regular_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/share_app"
            android:textAppearance="@style/ys_regular_"
            />

        <ImageView
            android:id="@+id/vector"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/share"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/lists"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/end_margin"
        >

        <TextView
            android:id="@+id/ys_regular_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/write_to_support"
            android:textAppearance="@style/ys_regular_"
            />

        <ImageView
            android:id="@+id/vector"
            android:layout_height="20dp"
            android:layout_width="22dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/support"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/lists"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/end_margin"
        >

        <TextView
            android:id="@+id/ys_regular_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/terms_of_service"
            android:textAppearance="@style/ys_regular_"
            />

        <ImageView
            android:id="@+id/vector"
            android:layout_height="18dp"
            android:layout_width="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/arrow_forward"
            />

    </RelativeLayout>

</LinearLayout>